Inserindo relacao N:1 de pedido

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/minhaloja?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.username=minhaloja
+spring.datasource.password=M!nh@l0j@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.show_sql=true
